--- a/tanakadesu.css
+++ b/tanakadesu.css
@@ -49,7 +49,7 @@ a{
   margin:0 auto;
 }
 .top-wrapper{
-  background-image:url(tanaka-img/tanakadesu/hamukun.jpg);
+  background-image:url(https://github.com/kaito216/tanakadesu/blob/master/hamukun.jpg?raw=true);
   background-size:cover;
  background-position:center left;
   height:100%;
